[gd_scene load_steps=11 format=2]

[ext_resource path="res://CommonScenes/ExtrasMenu/ExtrasMenuScreen.gd" type="Script" id=1]
[ext_resource path="res://CommonScenes/Buttons/PureText_Upgrade.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/OrbitronBlack60.font" type="BitmapFont" id=3]
[ext_resource path="res://CommonScenes/Button.gd" type="Script" id=4]
[ext_resource path="res://CommonScenes/UpgradeMenu/sprites/scanline_dark_colorburn.png" type="Texture" id=5]
[ext_resource path="res://CommonScenes/UpgradeMenu/sprites/scanline_bright_overlay.png" type="Texture" id=6]
[ext_resource path="res://CommonScenes/PromptLegends/PromptLegendConfirmCancel.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorFrame1:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.9, 0.9, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopEdge:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 352 ), Vector2( 0, 352 ), Vector2( 0, 652 ), Vector2( 100, 652 ), Vector2( -2220, 652 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BottomEdge:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 952 ), Vector2( 0, 952 ), Vector2( 0, 652 ), Vector2( 100, 652 ), Vector2( -2220, 652 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuContainer:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.9, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScanlineFx:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorFrame2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 360 ), Vector2( 0, 360 ), Vector2( 0, 660 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorFrame2:rect_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 604 ), Vector2( 1920, 604 ), Vector2( 1920, 0 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("LegendConfirmCancel")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fade_out"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorFrame1:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.9, 0.9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopEdge:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2220, 652 ), Vector2( -2220, 652 ), Vector2( 100, 652 ), Vector2( 0, 652 ), Vector2( 0, 352 ), Vector2( 0, 352 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BottomEdge:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2220, 652 ), Vector2( -2220, 652 ), Vector2( 100, 652 ), Vector2( 0, 652 ), Vector2( 0, 952 ), Vector2( 0, 952 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuContainer:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScanlineFx:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorFrame2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 660 ), Vector2( 0, 660 ), Vector2( 0, 360 ), Vector2( 0, 360 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorFrame2:rect_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 0 ), Vector2( 1920, 0 ), Vector2( 1920, 604 ), Vector2( 1920, 604 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("LegendConfirmCancel")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fade_in"
} ]
}

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScanlineFx/ScanlineBright:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.1, 0.6, 0.3, 0.7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScanlineFx/ScanlineBright:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 390 ), Vector2( 960, 930 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScanlineFx/ScanlineBright:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1920, 80 ), Rect2( 0, 1000, 1920, 80 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScanlineFx/ScanlineBright:region_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="ExtrasMenuScreen" type="CanvasLayer"]
pause_mode = 2
layer = 4
script = ExtResource( 1 )
cutscene_intro_path = "res://Cutscenes/Cutscene1.tscn"
cutscene_level5_path = "res://Cutscenes/Cutscene2.tscn"
cutscene_ending_path = "res://Cutscenes/Cutscene3.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="ColorFrame1" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.9 )
margin_top = -3.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.247059, 0.054902, 0.156863, 1 )

[node name="ColorFrame2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
margin_top = 360.0
margin_right = 1920.0
margin_bottom = 964.0
color = Color( 0.266667, 0.65098, 1, 0.6 )

[node name="MenuContainer" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0.9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -521.0
margin_top = -153.0
margin_right = 224.0
margin_bottom = 236.0
rect_scale = Vector2( 1.4, 1.4 )
mouse_filter = 0
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MenuContainer"]
margin_right = 745.0
margin_bottom = 71.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.960784, 1, 1 )
text = "EXTRAS"
align = 1

[node name="Credits" type="Button" parent="MenuContainer"]
margin_top = 75.0
margin_right = 745.0
margin_bottom = 124.0
focus_neighbour_top = NodePath("../Back")
text = "Credits"
script = ExtResource( 4 )

[node name="Intro" type="Button" parent="MenuContainer"]
margin_top = 128.0
margin_right = 745.0
margin_bottom = 177.0
disabled = true
text = "Intro Cutscene"
script = ExtResource( 4 )

[node name="Level5" type="Button" parent="MenuContainer"]
margin_top = 181.0
margin_right = 745.0
margin_bottom = 230.0
disabled = true
text = "The Guardian Sees You"
script = ExtResource( 4 )

[node name="Ending" type="Button" parent="MenuContainer"]
margin_top = 234.0
margin_right = 745.0
margin_bottom = 283.0
disabled = true
text = "Ending Cutscene"
script = ExtResource( 4 )

[node name="Back" type="Button" parent="MenuContainer"]
margin_top = 287.0
margin_right = 745.0
margin_bottom = 336.0
focus_neighbour_bottom = NodePath("../Credits")
text = "Back"
script = ExtResource( 4 )

[node name="ScanlineFx" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ScanlineDark" type="Sprite" parent="ScanlineFx"]
position = Vector2( 960, 660 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 615 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScanlineBright" type="Sprite" parent="ScanlineFx"]
modulate = Color( 1, 1, 1, 0.365847 )
position = Vector2( 960, 682.223 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 541.155, 1920, 80 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScanlinePlayer" type="AnimationPlayer" parent="ScanlineFx"]
root_node = NodePath("../..")
autoplay = "scanline loop"
"anims/scanline loop" = SubResource( 3 )

[node name="TopEdge" type="ColorRect" parent="."]
margin_top = 352.0
margin_right = 1920.0
margin_bottom = 367.0
color = Color( 0, 0.921569, 1, 1 )

[node name="BottomEdge" type="ColorRect" parent="."]
margin_top = 952.0
margin_right = 1920.0
margin_bottom = 967.0
color = Color( 0, 0.921569, 1, 1 )

[node name="LegendConfirmCancel" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="MenuContainer/Back" to="." method="_on_Back_pressed"]
